Advances Site display as Ul

--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,7 @@
     transform: rotate(360deg);
   }
 }
+
+/*  Tentative for ul component  */
+li { background: white; }
+li:nth-child(odd) { background: lightgray; }
